# nativeMCP

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
MCPServer/: CMakeLists.txt  MCPServer.cpp  MCPServer.h  RPC记录.md
host/: CMakeLists.txt  Host.cpp  Host.h  Logger.cpp  Logger.h  MCPClient.cpp  MCPClient.h  ModelAdapter.cpp  ModelAdapter.h  config.json  main.cpp
servers/: CMakeLists.txt  computer_use.cpp  computer_use.h  screen_parser.cpp  screen_parser.h  server_test.cpp  server_test.h  server_time.cpp  server_time.h
